java doc in model done